fix: footer contrast

--- a/styles/style.css
+++ b/styles/style.css
@@ -167,7 +167,7 @@ ul.navbar a:hover {
 
 footer {
   background-color: transparent;
-  color: #FFF;
+  color: black;
   padding: 2rem 0;
   display: flex;
   flex-direction: column;
